fixed z-index

--- a/components/Header/index.module.css
+++ b/components/Header/index.module.css
@@ -12,7 +12,7 @@
     top: 0;
     right: 0;
     background-color: rgba(255, 255, 255, 0.764);
-    z-index: 200;
+    z-index: 1111119999;
     transition: 0.7s;
     display: none;
     overflow-y: scroll;
